导入接口硬编码STRICT，mode参数无法接收；增加查询资源依赖的子资源接口和查询资源可用版本接口
